legördülő z-index fix

--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body{
 }
 
 
-@media (min-width: 501px) {
+@media (min-width: 479px) {
 
 ::-webkit-scrollbar {
     width: 15px;
@@ -296,10 +296,14 @@ body {
 
 ul.submenu{
 
+    z-index: 1;
+
+    margin-top: 0px;
+    margin-bottom: 0px;
     display: none;
-    transform: translateY(-87px);
+    transform: translateY(calc(74px - 245px));
     position: absolute;
-    z-index: -20;
+   
     width: 100%;
     list-style-type: none;
     padding: 0;
@@ -380,7 +384,7 @@ ul.submenu{
 
 
 
-@media (max-width: 855px) {
+@media (max-width: 870px) {
 
     .right-margin-on-size{
         margin-right: 0px;
@@ -464,9 +468,12 @@ ul.submenu{
         }
     
 
-    @media (max-width: 500px) {
+    @media (max-width: 478px) {
 
+        .submenu-selected{
+            border-left: 3px solid #1687A7;
 
+        }
         
         .large-image{
             aspect-ratio: 1/1;
@@ -634,8 +641,10 @@ ul.submenu li a{
     display: block;
     color: black;
     padding: 15px;
-
+    text-decoration: none;
 } 
+
+
   
 label {
     position: relative;
@@ -643,7 +652,7 @@ label {
 }
   
 input:checked~ul.submenu {
-    transform: translateY(158px);
+    transform: translateY(74px);
 }
 
 h3{
